--- a/src/css/components/_content.css
+++ b/src/css/components/_content.css
@@ -1,6 +1,6 @@
 .content {
     
-    @apply min-w-0 min-h-screen flex-1 pb-10;
+    @apply min-w-0 min-h-screen flex-1;
     @include media-breakpoint-down(md) {
         @apply px-4 max-w-full;
     }
