--- a/src/css/components/_global.css
+++ b/src/css/components/_global.css
@@ -12,7 +12,7 @@ html {
         }
     }
     body {
-        @apply antialiased overflow-x-hidden font-roboto text-sm text-slate-800;
+        @apply antialiased overflow-x-hidden text-sm text-slate-800;
         @include media-breakpoint-down(sm) {
             @apply px-3;
         }
