bc독점-데일리콘테스트 완료, 글로벌세팅 진행중

--- a/src/css/_colors.css
+++ b/src/css/_colors.css
@@ -40,6 +40,7 @@
     --background-light: #ffffff;
     --sponsor-visual:#EAECF3; 
     --casino-listbg:#ffffff;
+    --tab-bg:#ffffff; 
 }
 
 /* Default dark-mode colors */
@@ -84,6 +85,7 @@
     --background-light: #2D3035;
     --sponsor-visual:#1A1C20; 
     --casino-listbg:#32343B;
+    --tab-bg:#31343c; 
 }
 
 /* Theme 1 colors */
